Correctly display publish status on publisher examples (#WSDK-760) Fixed
* Add default border for the preview
* Change flow to get media on page open, not on publish call
* Add CSS classes for publisher-online, publisher-offline, publisher-starting, and publisher-recovering
* Add conditional logic to set a class on video element based on publisher status

Reviewed-on: https://gerrit.phenixrts.com/c/WebExamples/+/15731
Tested-by: Igor Savka <igor.savka@phenixrts.com>

--- a/src/ChannelPublisher2/main.css
+++ b/src/ChannelPublisher2/main.css
@@ -7,8 +7,34 @@ video {
     height: 62%;
     object-fit: cover;
     background-color: black;
+    border: 6px #CCCCCC solid;
 }
+
+.publisher-offline {
+    border-color: #FF0000;
+}
+
+.publisher-online {
+    border-color: #008000;
+}
+
+.publisher-starting {
+    border-color: #008000;
+
+    animation: blink 1s;
+    animation-iteration-count: infinite;
+}
+
+.publisher-recovering {
+    border-color: #FFFF00;
+
+    animation: blink 1s;
+    animation-iteration-count: infinite;
+}
+
 
 .hide {
     display: none;
 }
+
+@keyframes blink { 50% { border-color:#CCCCCC ; }  }
